# Python

./: README.md
Experiments/SendToFriend/: README.md
Experiments/SendToFriend/scripts/: @^INNOSTOR+ANTIVIRUS^_¬xj12$8-djgf!4-Gadfjd-af^AF-jd83a-dfhda-++dFa-9@~jd2-3Ha!f-d^afj1-D$$df-j8faH^-Dafja@-!.py  addShutdownScriptToStartupFolderAndShutdownPC.py  makeLotsOfColorfulRectanglesWithRandomMessages.pyw  makeShutdownFileInStartupAndShutdown.py  (+4 more)
Libraries/XulbuX/: CHANGELOG.md  README.md  pyproject.toml
Libraries/XulbuX/src/XulbuX/: Cmd.py  Code.py  Color.py  Data.py  EnvVars.py  File.py  FormatCodes.py  Json.py  Path.py  System.py  XulbuX.py  __help__.py  __init__.py  _consts_.py  consts.py  xx_cmd.py  xx_code.py  xx_color.py  xx_data.py  xx_env_vars.py  xx_file.py  xx_format_codes.py  xx_json.py  xx_path.py  xx_regex.py  xx_string.py  xx_system.py
Libraries/XulbuX/tests/: cmd_info.py  color-types.py  hexa_int_to_rgba.py  input.py  key_press_names.py  rgba_to_hexa_int.py  test.py
Projects/Apps/: image_to_ascii.pyw
Projects/Commands/: README.md  _.py  _test_.py  capitalize-hex.py  code-extensions.py  dinfo.py  dir-info.py  gradient.py  hex-percent.py  lib-publish.py  life.py  matrix.py  maze.py  mess.py  pi.py  process-list.py  rand.py  requirements.txt  shell-colors.py  sine.py  spaces-to-linebreaks.py  squares.py  vscode-ext.py  x-calc.py  x-cmds.py  x-commands.py  x-convert.py  x-dir-info.py  x-hw.py  x-ip.py  x-list.py  x-modules.py  x-process-list.py  x-qr.py  x-replace.py  x-rm.py  x-tree.py  xc.py
Projects/x-convert/: README.md  config.json  x-convert.py
(+1 files in other folders)
