[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
keywords = [
  "xulbux",
  "python",
  "library",
  "utility",
  "helper",
  "helpful",
  "functions",
  "tools",
  "classes",
  "types",
  "methods",
  "cmd",
  "code",
  "color",
  "data",
  "structures",
  "env",
  "environment",
  "file",
  "format",
  "json",
  "path",
  "regex",
  "string",
  "system",
  "operations",
  "presets",
]
name = "XulbuX"
version = "1.5.4"
authors = [{ name = "XulbuX", email = "xulbux.real@gmail.com" }]
description = "A library which includes a lot of really helpful functions."
readme = "README.md"
changelog = "CHANGELOG.md"
requires-python = ">=3.10.0"
dependencies = ["keyboard>=0.13.5", "mouse>=0.7.1", "regex>=2023.10.3"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/XulbuX-dev/Python/tree/main/Libraries/XulbuX"
"Bug Reports" = "https://github.com/XulbuX-dev/Python/issues"
"Documentation" = "https://github.com/XulbuX-dev/Python/wiki"
"Source Code" = "https://github.com/XulbuX-dev/Python/tree/main/Libraries/XulbuX/src"
"Changelog" = "https://github.com/XulbuX-dev/Python/blob/main/Libraries/XulbuX/CHANGELOG.md"
